Update the query APIs to use get (#25)
* Update the query APIs to use get

* Auto commit: update dependencies & generated client & code formatting

---------
